--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleGeneral.css">
   <link rel="stylesheet" href="css/styleScroll.css">
 
 </head>
@@ -18,6 +19,7 @@
     <li><a style="cursor: pointer;" onclick="ScrollClick('home')">Home</a></li>
     <li><a style="cursor: pointer;" onclick="ScrollClick('steam')">Steam</a></li>
     <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
+    <li><a href="fyvestar.html">fyvestar</a></li>
   </ul>
 
   <div class="panel" data-color="grey" id="home">
@@ -42,6 +44,7 @@
 
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src="js/index.js"></script>
+  <script src="js/indexScroll.js"></script>
 
 </body>
 
