--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="panel" data-color="red2" id="steam">
     <div class="wrapper">
-      <h1><a href="https://steamcommunity.com/id/Asirt/">Steam</a></h1>
+      <h1><a href="https://steamcommunity.com/id/Asirt/" target="_blank">Steam</a></h1>
     </div>
   </div>
 
