--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="scroll-downs" style="cursor: pointer;" onclick="ScrollClick('steam')">
       <div class="mousey">
-        <div class="scroller">></div>
+        <div class="scroller"></div>
       </div>
     </div>
   </div>
