--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
   <meta charset="UTF-8">
   <title>Asirt</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styleFancy.css">
   <link rel="stylesheet" href="css/styleGeneral.css">
   <link rel="stylesheet" href="css/styleScroll.css">
 
 </head>
 
 <body>
-  <ul>
-    <li><a style="cursor: pointer;" onclick="ScrollClick('home')">Home</a></li>
-    <li><a style="cursor: pointer;" onclick="ScrollClick('steam')">Steam</a></li>
-    <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
-    <li><a href="fyvestar.html">fyvestar</a></li>
-  </ul>
+  <div class=header>
+    <ul>
+      <li><a style="cursor: pointer;" onclick="ScrollClick('home')" id="grey5">Home</a></li>
+      <li><a style="cursor: pointer;" onclick="ScrollClick('steam')" id="red5">Steam</a></li>
+      <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
+      <li><a href="fyvestar.html">fyvestar</a></li>
+    </ul>
+  </div>
 
-  <div class="panel" data-color="grey" id="home">
+  <section id="home" data-color="grey">
     <div class="fancy">
       <a href="" id="fancy">asirt</a>
     </div>
@@ -31,15 +33,15 @@
         <div class="scroller"></div>
       </div>
     </div>
-  </div>
+  </section>
 
 
 
-  <div class="panel" data-color="red2" id="steam">
+  <section id="steam" data-color="red">
     <div class="wrapper">
-      <h1><a href="https://steamcommunity.com/id/Asirt/" target="_blank">Steam</a></h1>
+      <h1><a href="https://steamcommunity.com/id/Asirt/">Steam</a></h1>
     </div>
-  </div>
+  </section>
 
 
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
