--- a/fyvestar.html
+++ b/fyvestar.html
@@ -15,6 +15,7 @@
     <li><a href="index.html#steam">Steam</a></li>
     <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
     <li><a href="" class="active">fyvestar</a></li>
+    <li><a href="https://asirt.github.io/jsMinesweeper/">Minesweeper</a></li>
   </ul>
 
   <section>
