--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a style="cursor: pointer;" onclick="ScrollClick('steam')" id="red5">Steam</a></li>
       <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
       <li><a href="fyvestar.html">fyvestar</a></li>
+      <li><a href="https://asirt.github.io/jsMinesweeper/">Minesweeper</a></li>
     </ul>
   </div>
 
