--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class=header>
+  <div class="header">
     <ul>
       <li><a style="cursor: pointer;" onclick="ScrollClick('home')" id="grey5">Home</a></li>
       <li><a style="cursor: pointer;" onclick="ScrollClick('steam')" id="red5">Steam</a></li>
