update to new name

--- a/fyvestar.html
+++ b/fyvestar.html
@@ -13,9 +13,9 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="index.html#steam">Steam</a></li>
-    <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
+    <li><a href="https://github.com/JKoenen2" target="_blank">Github</a></li>
     <li><a href="" class="active">fyvestar</a></li>
-    <li><a href="https://asirt.github.io/jsMinesweeper/">Minesweeper</a></li>
+    <li><a href="https://JKoenen2.github.io/jsMinesweeper/">Minesweeper</a></li>
   </ul>
 
   <section>
