--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Asirt</title>
+  <title>JKoenen</title>
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> -->
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
@@ -19,15 +19,15 @@
     <ul>
       <li><a style="cursor: pointer;" onclick="ScrollClick('home')" id="grey5">Home</a></li>
       <li><a style="cursor: pointer;" onclick="ScrollClick('steam')" id="red5">Steam</a></li>
-      <li><a href="https://github.com/Asirt" target="_blank">Github</a></li>
+      <li><a href="https://github.com/JKoenen2" target="_blank">Github</a></li>
       <li><a href="fyvestar.html">fyvestar</a></li>
-      <li><a href="https://asirt.github.io/jsMinesweeper/">Minesweeper</a></li>
+      <li><a href="https://JKoenen2.github.io/jsMinesweeper/">Minesweeper</a></li>
     </ul>
   </div>
 
   <section id="home" data-color="grey">
     <div class="fancy">
-      <a href="" id="fancy">asirt</a>
+      <a href="" id="fancy">JKoenen</a>
     </div>
     <div class="scroll-downs" style="cursor: pointer;" onclick="ScrollClick('steam')">
       <div class="mousey">
