--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a style="cursor: pointer;" onclick="ScrollClick('home')" id="grey5">Home</a></li>
       <li><a style="cursor: pointer;" onclick="ScrollClick('steam')" id="red5">Steam</a></li>
       <li><a href="https://github.com/PedroRBC" target="_blank">Github</a></li>
+      <li><a href="https://discord.gg/zGB438X" target="_blank">Discord</a></li>
     </ul>
   </div>
 
