--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section id="home" data-color="grey">
     <div class="fancy">
-      <a href="" id="fancy">PedroRBC</a>
+      <a href="" id="fancy">Pedro</a>
     </div>
     <div class="scroll-downs" style="cursor: pointer;" onclick="ScrollClick('steam')">
       <div class="mousey">
